src/styles/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body,
#app {
  margin: 0;
  padding: 0;
}

.btn {
}

.icon-btn {
  font-size: 0.9em;
}

::-webkit-scrollbar-thumb {
  background: rgba(90, 90, 90);
}

::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.2);
}

